more work on the readme, writing codebook, adding cleaned data files.

--- a/gettingCleaningdata/ReadMe.html
+++ b/gettingCleaningdata/ReadMe.html
@@ -413,24 +413,33 @@ summary {
 </div>
 
 
+<div id="readme" class="section level1">
+<h1>ReadMe</h1>
 <div id="purpose" class="section level2">
 <h2>Purpose:</h2>
 <p>This is a project for the 3rd course in Johns Hopkins University’s Data Science Specialization offered by <a href="http://coursera.org">Coursera</a>. The projects requires that data to be gathered and tidied with the following stipulations:</p>
 <p>Create one R script called run_analysis.R that does the following.</p>
-<pre><code>    1. Merge the training and the test sets to create one data set.
-    2. Extract only the measurements on the mean and standard deviation 
-       for each measurement.
-    3. Use descriptive activity names to name the activities in the data set
-    4. Appropriately labels the data set with descriptive variable names.
-    5. From the data set in step 4, creates a second, independent tidy data 
-       set with the average of each variable for each activity and each 
-       subject.</code></pre>
+<ol start="0" style="list-style-type: decimal">
+<li>Read in all the necessary labels, data, column names, and subject Id’s Appropriately labels the data set with descriptive variable names.(part of #4)</li>
+<li>Merge the training and the test sets to create one data set.</li>
+<li>Extract only the measurements on the mean and standard deviation for each measurement.</li>
+<li>Use descriptive activity names to name the activities in the data set</li>
+<li>Format the descriptive variable names that were added in #0 so that they can be conveniently used with out being encased in ``. To do this the dashes, -, and the parentheses,(), need to be removed from the variable names.</li>
+<li>From the data set in step 4, create a second, independent tidy data set with the average of each variable for each activity and each subject.</li>
+</ol>
 </div>
 <div id="raw-data" class="section level2">
 <h2>Raw data:</h2>
 <p>Source: Davide Anguita, Alessandro Ghio, Luca Oneto, Xavier Parra and Jorge L. Reyes-Ortiz. A Public Domain Dataset for Human Activity Recognition Using Smartphones. 21th European Symposium on Artificial Neural Networks, Computational Intelligence and Machine Learning, ESANN 2013. Bruges, Belgium 24-26 April 2013.</p>
 <p>The raw data is stored in the <a href="https://github.com/sarahmass/dataScienceCoursera/tree/main/gettingCleaningdata/UCI%20HAR%20Dataset">UCI HAR Dataset directory</a></p>
-<p>Within the UCI HAR Dataset directory, there is a <a href="https://github.com/sarahmass/dataScienceCoursera/blob/main/gettingCleaningdata/UCI%20HAR%20Dataset/README.txt">ReadMe</a> describing the data and how it was collected. The data that has been drawn upon for this project is found in both the train and test folders. Since we are gathering data to anazyse it rather than to train a Classification Neural Neural Network the data needs to be brought together into a single dataframe, participant id’s, the activity, and collected feature values need to be pulled together first. The participants’ id’s have been separated from the collected metrics because the ID is needed for the job of classifying each activity. ID’s are saved in the files called subject_test.txt and subject_train.txt. Since the Neural Network was being trained to take in the collected metrics to classify the activity as Walking, Walking Upstairs, Walking Downstairs, or laying down, the actual activity tags were separated out of the data file as well to be used in the error analysis of the Neural Network. The activities for each experiment(or row of ID and Data) can be found in the files labeled y_test.txt and y_train.txt. The collected metrics are found in the files X_test.txt and X_</p>
+<p>Within the UCI HAR Dataset directory, there is a <a href="https://github.com/sarahmass/dataScienceCoursera/blob/main/gettingCleaningdata/UCI%20HAR%20Dataset/README.txt">ReadMe</a> describing the data and how it was collected. The subject ID’s, normalized data, and activity labels will be found with in the sub-directories: <a href="https://github.com/sarahmass/dataScienceCoursera/tree/main/gettingCleaningdata/UCI%20HAR%20Dataset/train">train</a> and <a href="https://github.com/sarahmass/dataScienceCoursera/tree/main/gettingCleaningdata/UCI%20HAR%20Dataset/test">test</a>.</p>
+<p>The original purpose of the data was to use it to train a Neural Network to classify the activity being performed by each subject. It was separated into two sets, a training set and a testing set. The Neural Network required that the Id’s, collected metrics, and the labeled outcome be saved in separate places. Within their respective sub-directory the ID’s can be found in the files labeled subject_train.txt and subject_test.txt, the data with 561 columns of collected metrics can be found in X_train.txt and X_test.txt, and the activity labels are in y_train.txt and y_test.txt. Before the testing and training data can be merged the ID, activity, and data columns need to be merged together, and then the rows for the testing and training subjects can be merged.</p>
+<p>The metric data collected for each subject for each activity have the 561 row names found in the feature.txt file in the UCI HAR Dataset Directory. The metric variables are described in the feature_info.txt file.</p>
+</div>
+<div id="getting-and-cleaning-the-data" class="section level2">
+<h2>Getting and Cleaning the Data:</h2>
+<p>The raw data as described above will be cleaned as described in the Purpose section. I have included a <a href="%7Badd%20link%7D">CodeBook.md</a> to detail my process, the code in <a href="%7Badd%20link%7D">run_analysis.R</a>, and the two data sets in {fill in the file names and links here}.</p>
+</div>
 </div>
 
 
